
[package]
name = "simple"
description = "The simplest graphics library, inspired by LOVE2D"
version = "0.3.1"
repository = "https://github.com/alexandercampbell/simple"
keywords = ["simple","graphics","2D"]
authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
license = "Zlib"
readme = "README.md"

[lib]
name = "simple"
path = "src/lib.rs"

[dependencies]
libc = "0.2.126"
rand = "0.8.5"
num = "0.4.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "unsafe_textures"]

